--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
-language:
+title: sunny
+subtitle: ALi
+description: blog
+author: sunny<17765293970@163.com>
+language: zh
 timezone:
 
 # URL
