--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "hexo": {
     "version": "3.4.2"
   },
+  "scripts": {
+    "start": "hexo server",
+    "build": "hexo generate"
+  },
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
