--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://sunnyshining.github.io/
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :year/:title/
 permalink_defaults:
 
 # Directory
@@ -28,6 +28,9 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  source/about
+  source/comment
+  source/python3
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -51,13 +54,25 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 5
   order_by: -date
 
 # Category & Tag
 default_category: uncategorized
 category_map:
+  编程: programming
+  生活: life
+  其他: other
 tag_map:
+  vue: vue
+  react: react
+  react native: RN
+  javascript: js
+  python: python
+  git: git
+  node: node.js
+  css: css
+  编码规范: codeing
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
@@ -68,7 +83,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Extensions
