--- a/themes/sunny/_config.yml
+++ b/themes/sunny/_config.yml
@@ -32,15 +32,6 @@ menu:
     icon: icon-comment
 
 #----------------------------
-# 副导航
-#----------------------------
-subnav:
-  github: "#"
-  weibo: "#"
-  rss: "#"
-  zhihu: "#"
-
-#----------------------------
 # RSS
 #----------------------------
 rss: /atom.xml
@@ -65,8 +56,7 @@ share: true
 #----------------------------
 weibo_show:
   enable: true
-  code: <iframe id="myWeibo" width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="https://widget.weibo.com/weiboshow/index.php?language=&amp;width=0&amp;height=550&amp;fansRow=2&amp;ptype=1&amp;speed=0&amp;skin=1&amp;isTitle=1&amp;noborder=1&amp;isWeibo=1&amp;isFans=0&amp;uid=2449308854&amp;verifier=454ed586&amp;dpc=1"></iframe>
-
+  code: <iframe id="myWeibo" width="100%" height="400" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=400&fansRow=2&ptype=1&speed=0&skin=1&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=2449308854&verifier=454ed586&dpc=1"></iframe>
 #----------------------------
 # 是否开启评论
 #----------------------------
@@ -100,6 +90,16 @@ friends:
       name: Smile415的github
       title: Smile415的github
       link: https://github.com/Smile415
+#----------------------------
+# 赞助
+#----------------------------
+sponsor:
+  enable: true
+  list:
+      0:
+        logo: img/sponsor/upyun_logo.png
+        title: 又拍云
+        link: https://www.upyun.com/league?utm_source=baidu&utm_medium=ppc&utm_campaign=cdn&utm_term=freecdn&utm_content=fc001
 #----------------------------
 # 头部链接
 #----------------------------
