--- a/themes/sunny/_config.yml
+++ b/themes/sunny/_config.yml
@@ -56,7 +56,7 @@ share: true
 #----------------------------
 weibo_show:
   enable: true
-  code: <iframe id="myWeibo" width="100%" height="400" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=400&fansRow=2&ptype=1&speed=0&skin=1&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=2449308854&verifier=454ed586&dpc=1"></iframe>
+  code: <iframe id="myWeibo" width="100%" height="400" class="share_self"  frameborder="0" scrolling="no" src="https://widget.weibo.com/weiboshow/index.php?language=&width=0&height=400&fansRow=1&ptype=1&speed=0&skin=1&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=2449308854&verifier=454ed586&dpc=1"></iframe>
 #----------------------------
 # 是否开启评论
 #----------------------------
