--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ skip_render:
   source/comment
   source/python3
   source/interview
+  source/skills
 
 # Writing
 new_post_name: :title.md # File name of new posts
