--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ tag_map:
   编码规范: codeing
   生活: life
   webpack: webpack
+  linux: linux
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
