deploy blog on master branch

--- a/themes/hexo-theme-sunny/_config.yml
+++ b/themes/hexo-theme-sunny/_config.yml
@@ -137,6 +137,8 @@ SEO:
 # 百度分析
 #----------------------------
 baidu_analytics: true
+
+baidu_site_verification: O3iHefEmkx
 #----------------------------
 # 高亮样式
 #----------------------------
