deploy blog on master branch

--- a/themes/hexo-theme-sunny/_config.yml
+++ b/themes/hexo-theme-sunny/_config.yml
@@ -138,7 +138,7 @@ SEO:
 #----------------------------
 baidu_analytics: true
 
-baidu_site_verification: BXljFZAlon
+baidu_site_verification: rAWa6yMQTj
 #----------------------------
 # 高亮样式
 #----------------------------
