--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,11 @@ skip_render:
   source/interview
   source/skills
 
+sitemap:
+path: sitemap.xml
+baidusitemap:
+path: baidusitemap.xml
+
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
